[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Dialog Settings/Scripts/FactionChange.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Dialog Settings/ChooseFaction.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/MainEditor.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Font/TinyFont.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="FactionChange" type="Control" groups=["faction_access"]]
margin_top = 268.0
margin_right = 405.0
margin_bottom = 318.0
rect_min_size = Vector2( 405, 50 )
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 5.0
rect_min_size = Vector2( 350, 50 )
custom_styles/panel = SubResource( 1 )

[node name="ChooseFaction" parent="Panel" instance=ExtResource( 2 )]
margin_left = 12.0
margin_right = 126.0
custom_fonts/font = ExtResource( 4 )

[node name="FactionID" type="SpinBox" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 134.0
margin_top = -12.0
margin_right = 228.0
margin_bottom = 12.0
min_value = -1.0
max_value = 65535.0
value = -1.0
align = 1
prefix = "ID:"

[node name="Factionpoints" type="SpinBox" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -12.0
margin_right = -7.0
margin_bottom = 12.0
min_value = -1e+08
max_value = 1e+06
value = 100.0
align = 1
prefix = "Add:"
suffix = "pts"

[node name="VSeparator" type="VSeparator" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -20.0
margin_right = 29.0
margin_bottom = 20.0

[connection signal="faction_chosen" from="Panel/ChooseFaction" to="." method="set_id"]
[connection signal="value_changed" from="Panel/FactionID" to="." method="_on_FactionID_value_changed"]
[connection signal="value_changed" from="Panel/Factionpoints" to="." method="_on_Factionpoints_value_changed"]
